# Todo-App

./: pyproject.toml  requirements.txt  runserver.py  todo_app
productionfiles/: styles.css
todo/: forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_task_completed.py
todo/static/: styles.css
todo/templates/todo/: add_task.html  base.html  edit_task.html  login.html  register.html  task_list.html  test.html
todo_project/: settings.py  urls.py
